---
source: cli/tests/snapshot/main.rs
expression: err
---
error: unmatched pattern
   ┌─ [INPUTS_PATH]/errors/non_exhaustive_match.ncl:7:9
   │  
 7 │   let f = match {
   │ ╭─────────^
 8 │ │   'c => "hello",
 9 │ │   'd => "adios",
10 │ │ }
   │ ╰─^ in this match expression
   · │
13 │   f x
   │     - this value doesn't match any branch


